tekton/triggers/github-eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-demo-github-listener
  namespace: tekton-cicd
  labels:
    app.kubernetes.io/name: app-demo
    app.kubernetes.io/component: trigger
    app.kubernetes.io/part-of: crc-tekton-gitops-lab
spec:
  to:
    kind: Service
    name: el-app-demo-github-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
